Fixed video alignment issue

--- a/public/static/less/style.less
+++ b/public/static/less/style.less
@@ -31,7 +31,7 @@ a {
 }
 
 video {
-  margin: 1%;
+  margin: 5px 0;
 }
 
 #localVideo
